# CTFdCLI

./: .gitignore  README.md  pyproject.toml
ctfdcli/: __init__.py  main.py
ctfdcli/commands/: __init__.py  challenges.py  cwd.py  info.py  init.py  lookup.py  profile.py  scoreboard.py  submit.py  sync.py  team.py
ctfdcli/core/: __init__.py  api_client.py  config.py  models.py
ctfdcli/utils/: __init__.py  exceptions.py  helpers.py  subcommands.py
