[project]
name = "ctfdcli"
version = "1.0.0"
description = "A comprehensive CLI tool for interacting with CTFd platforms"
authors = [
    {name = "Yeeb"}
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pathlib>=1.0.0",
    "configparser>=6.0.0",
    "tqdm>=4.65.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.8"

[project.scripts]
ctfdcli = "ctfdcli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true